--- a/index.html
+++ b/index.html
@@ -12,22 +12,20 @@
     <div id="movies"> 
         <h1>List of movies</h1>
         <ul id="films">
-            <li>Vioja mahakamani</li>
-            <li>Safarafina</li>
-            <li>Mr.Bean</li>
+           
         </ul>
 
     </div>
     <div id="movie-details">
-        <h1 id="">The Giant Gila Monster</h1>
-        <img src="https://www.gstatic.com/tv/thumb/v22vodart/2157/p2157_v_v8_ab.jpg" alt="kkk" >
-        <p id="">A giant lizard terrorizes a rural Texas community and a heroic teenager attempts to destroy the creature.</p>
+        <h1 id="title">The Giant Gila Monster</h1>
+        <img id="image"src="https://www.gstatic.com/tv/thumb/v22vodart/2157/p2157_v_v8_ab.jpg" alt="kkk" >
+        <p id="descr">A giant lizard terrorizes a rural Texas community and a heroic teenager attempts to destroy the creature.</p>
     </div>
-    <div>
+    <div id="tickets">
         <h1><b>Movies</b> </h1>
         <h2 id="Run_time">Run time <span>0</span></h2>
         <h2 id="Show_time">Show time <span>0</span></h2>
-        <h2 id="Available_tickets">Available tickets<span>0</span></h2>
+        <h2>Available tickets :<span id="Available_tickets">0</span></h2>
      
         <button id="Buy_tickets">Buy Tickets</button>
          <button id="Remove">Remove</button>
